Fixed all the problem on mobile size screen

--- a/styles.css
+++ b/styles.css
@@ -304,9 +304,11 @@ nav .fa-solid {
     display: none;
 }
 
-@media (max-width: 600px) {
+@media screen and (max-width: 600px) {
 
     #header {
+        width: 100%;
+        height: 100%;
         background-image: url(images/backgroundsmall.png);
     }
 
@@ -367,11 +369,26 @@ nav .fa-solid {
 
     .about-col-2 {
         font-size: 14px;
+        overflow: hidden;
     }
+
+    .tab-title {
+        overflow: auto;
+    }
+
 
     .tab-links {
         font-size: 16px;
         margin-right: 20px;
+    }
+
+    .tab-links::after {
+        display: none;
+    }
+
+    .hobint {
+        margin-top: 30px;
+        margin-bottom: 30px;
     }
 
     
